infrastructure/kubernetes/enable-gateway/enable-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: enable-gateway-ingress
  namespace: enable
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: cyberrytechnologies.nl
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: enable-gateway-service
            port:
              number: 443
